<resources>
    <string name="app_name">School_project</string>
    <string name="ex_num1">115</string>
    <string name="ex_num2">313</string>
    <string name="search_str">Search</string>
    <string name="logo">Future school map</string>
    <string name="ex_num3">310а</string>
    <string name="cat2">Search cabinet</string>
    <string name="cat1">Build a route</string>
    <string name="text_action_bar">Fututre School Map</string>
    <string name="floor1">first floor</string>
    <string name="floor2">second floor</string>
    <string name="floor3">the third floor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>